syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./;pb";

package event;

service EventService {
  rpc CreateEvent(Event) returns (CreateEventResponse) {}
  rpc UpdateEvent(Event) returns (google.protobuf.Empty) {}
  rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {}
  rpc GetListEvents(GetListEventsRequest) returns (GetListEventsResponse) {}
}

message Event {
  string ID = 1;
  string Header = 2;
  string Description = 3;
  string UserID = 4;
  google.protobuf.Timestamp EventTime = 5;
  google.protobuf.Timestamp FinishEventTime = 6;
  google.protobuf.Timestamp NotificationTime = 7;
}

message GetListEventsRequest {
  google.protobuf.Timestamp start = 1;
  int64 amountDays = 2;
}

message DeleteEventRequest {
  string id = 1;
}

message GetListEventsResponse {
  repeated Event events = 1;
}

message CreateEventResponse {
  string id = 1;
}